# Point-Cloud-Segmentaion-PCL-and-Open3D

./: README.md
CPP_PCL/: CMakeLists.txt  clustering.cpp  pcl_src.cpp  plane_segment.cpp
Python_Open3D/: 1_visualize_pc.py  2_clustering.py  3_plane_segmentation.py
